--- a/Cafeine/Page_Resources/CollectionTemplate.xaml
+++ b/Cafeine/Page_Resources/CollectionTemplate.xaml
@@ -1,10 +1,10 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Cafeine.Datalist"
-    x:Class="Cafeine.DataTemplates">
-    <DataTemplate x:Name="WatchingCollection" x:DataType="local:UserItemCollection">
-        <RelativePanel Width="165" Height="295" >
+    xmlns:local="using:Cafeine.Properties"
+    x:Class="Cafeine.ItemTemplates">
+    <DataTemplate x:Name="WatchingCollection" x:DataType="local:ItemProperties">
+        <RelativePanel Width="165" Height="290">
             <Grid x:Name="quickstatus" PointerEntered="ImageEntered" PointerExited="ImageExited" Height="225" Width="160" Margin="3,3,3,8" HorizontalAlignment="Center" Canvas.ZIndex="1" Opacity="0">
                 <Grid.Resources>
                     <Storyboard x:Name="ImageOnHover">
@@ -33,13 +33,18 @@
                 </Grid>
             </Grid>
             <Image x:Name="theimage" Source="{x:Bind Imgurl}" MaxHeight="225" HorizontalAlignment="Center" VerticalAlignment="Top" RelativePanel.AlignLeftWithPanel="True" Stretch="UniformToFill" Margin="3,3,3,5"/>
-            <TextBlock x:Name="thetitle" Margin="3,0" Text="{x:Bind Item_Title}" x:Phase="1" FontFamily="Segoe UI" FontWeight="SemiBold" FontSize="15" RelativePanel.Below="quickstatus" TextTrimming="None" TextWrapping="Wrap" Foreground="#FF333333"/>
-            <TextBlock x:Name="series_start" Text="{x:Bind Series_start}" Margin="3,0" x:Phase="1" FontFamily="Segoe UI" FontSize="15" RelativePanel.Below="thetitle" TextTrimming="None" TextWrapping="Wrap" Foreground="#FF3F3F3F"/>
+            <TextBlock x:Name="thetitle" Margin="3,0" Text="{x:Bind Item_Title}" x:Phase="1"  FontSize="15" FontWeight="Medium" RelativePanel.Below="quickstatus" TextTrimming="CharacterEllipsis" TextWrapping="Wrap" Foreground="#FF333333" MaxLines="2" FontStretch="ExtraCondensed"/>
+            <TextBlock x:Name="series_start" Text="{x:Bind Series_start}" Visibility="Collapsed" Margin="3,0" x:Phase="1" FontFamily="Segoe UI" FontSize="15" RelativePanel.Below="thetitle" TextTrimming="None" TextWrapping="Wrap" Foreground="#FF3F3F3F"/>
         </RelativePanel>
     </DataTemplate>
     <ListViewItemPresenterCheckMode x:Key="GridViewItemCheckMode">Inline</ListViewItemPresenterCheckMode>
     <Style x:Key="WatchingTab" TargetType="GridViewItem">
-        <Setter Property="Margin" Value="0,0,14,14"/>
+        <Setter Property="Margin" Value="0,0,4,14"/>
     </Style>
-    
+    <x:Double x:Key="PivotHeaderItemFontSize">20</x:Double>
+    <x:String x:Key="PivotHeaderItemThemeFontWeight">SemiBold</x:String>
+    <Thickness x:Key="PivotHeaderItemMargin">0,0,8,0</Thickness>
+    <x:String x:Key="PivotHeaderItemForegroundUnselected">#FF7F7F7F</x:String>
+    <x:String x:Key="PivotHeaderItemForegroundSelected">#FF333333</x:String>
+
 </ResourceDictionary>
