--- a/Cafeine/Pages/Animelist.xaml
+++ b/Cafeine/Pages/Animelist.xaml
@@ -2,69 +2,48 @@
     x:Class="Cafeine.Animelist"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Cafeine"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    <Page.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <local:DataTemplates/>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Page.Resources>
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="48"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Pivot Margin="8,24,0,0">
-            <Pivot.Resources>
-                <x:Double x:Key="PivotHeaderItemFontSize">20</x:Double>
-                <x:String x:Key="PivotHeaderItemThemeFontWeight">SemiBold</x:String>
-                <Thickness x:Key="PivotHeaderItemMargin">0,0,8,0</Thickness>
-                <x:String x:Key="PivotHeaderItemForegroundUnselected">#FF7F7F7F</x:String>
-                <x:String x:Key="PivotHeaderItemForegroundSelected">#FF333333</x:String>
-                <!--#region ANJING KENAPA MUSTI KEK GINI SIH-->
-                <Style x:Key="PivotHeader" TargetType="PivotHeaderItem">
-                    <Setter Property="IsTabStop" Value="True" />
-                </Style>
-            </Pivot.Resources>
-            <PivotItem Header="Watching" Margin="0">
-                <Grid>
-                    <GridView x:Name="watch" Foreground="{x:Null}" IsItemClickEnabled="True" ItemClick="NavigateItemtoDetailsPage" ItemTemplate="{StaticResource WatchingCollection}" ItemContainerStyle="{StaticResource WatchingTab}" ScrollViewer.VerticalScrollBarVisibility="Hidden">
-                        <!--
-                        <GridView.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <WrapGrid Orientation="Horizontal" HorizontalAlignment="Center"/>
-                            </ItemsPanelTemplate>
-                        </GridView.ItemsPanel>-->
-                    </GridView>
+        <CommandBar>
+            <CommandBar.Content>
+                <Grid Height="48">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <RelativePanel VerticalAlignment="Center" Padding="24,0,0,0">
+                        <RadioButton x:Name="Library" Content="Library" GroupName="Tab" Checked="TabChecked" Padding="0,0,24,0" FontSize="24" VerticalAlignment="Center" FontWeight="Light"/>
+                        <RadioButton x:Name="Schedule" RelativePanel.RightOf="Library" Content="Schedule" GroupName="Tab" Checked="TabChecked" Padding="0,0,24,0" FontSize="24" VerticalAlignment="Center" FontWeight="Light"/>
+                        </RelativePanel>
                 </Grid>
-            </PivotItem>
-            <PivotItem Header="On Hold" Margin="0">
-                <Grid>
-                    <GridView x:Name="OnHold" Foreground="{x:Null}" IsItemClickEnabled="True" ItemClick="NavigateItemtoDetailsPage" ItemTemplate="{StaticResource WatchingCollection}" ItemContainerStyle="{StaticResource WatchingTab}" ScrollViewer.VerticalScrollBarVisibility="Hidden" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-                </Grid>
-            </PivotItem>
-            <PivotItem Header="Plan to Watch" Margin="0">
-                <Grid>
-                    <GridView x:Name="plantowatch" Foreground="{x:Null}" IsItemClickEnabled="True" ItemClick="NavigateItemtoDetailsPage" ItemTemplate="{StaticResource WatchingCollection}" ItemContainerStyle="{StaticResource WatchingTab}" ScrollViewer.VerticalScrollBarVisibility="Hidden" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-                </Grid>
-            </PivotItem>
-            <PivotItem Header="Completed" Margin="0">
-                <Grid>
-                    <GridView x:Name="completed" Foreground="{x:Null}" IsItemClickEnabled="True" ItemClick="NavigateItemtoDetailsPage" ItemTemplate="{StaticResource WatchingCollection}" ItemContainerStyle="{StaticResource WatchingTab}" ScrollViewer.VerticalScrollBarVisibility="Hidden" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-                </Grid>
-            </PivotItem>
-            <PivotItem Header="Dropped" Margin="0">
-                <Grid>
-                    <GridView x:Name="dropped" Foreground="{x:Null}" IsItemClickEnabled="True" ItemClick="NavigateItemtoDetailsPage" ItemTemplate="{StaticResource WatchingCollection}" ItemContainerStyle="{StaticResource WatchingTab}" ScrollViewer.VerticalScrollBarVisibility="Hidden" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-                </Grid>
-            </PivotItem>
-
-        </Pivot>
+            </CommandBar.Content>
+            <AppBarButton Icon="Add">
+                <AppBarButton.Flyout>
+                    <Flyout>
+                        <RelativePanel>
+                            <TextBlock Text="Under Construction" FontFamily="Segoe UI" FontWeight="SemiBold" FontSize="20" Margin="10,0,10,0" Height="16" TextAlignment="Center" Foreground="#FF333333" TextLineBounds="Tight" />
+                            <!--<Button x:Name="Logout" Content="Logout" RelativePanel.Below="Username" HorizontalContentAlignment="Left" Click="Logout_test"/>-->
+                        </RelativePanel>
+                    </Flyout>
+                </AppBarButton.Flyout>
+            </AppBarButton>
+            <AppBarButton Icon="Setting">
+                <AppBarButton.Flyout>
+                    <MenuFlyout>
+                        <MenuFlyoutItem Text="Logout" Click="Logout_test"/>
+                    </MenuFlyout>
+                </AppBarButton.Flyout>
+            </AppBarButton>
+        </CommandBar>
+        <Frame x:Name="ContentFrame" Grid.Row="1" />
     </Grid>
 </Page>
