--- a/Cafeine/Pages/Searchpage.xaml
+++ b/Cafeine/Pages/Searchpage.xaml
@@ -2,10 +2,20 @@
     x:Class="Cafeine.Searchpage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Cafeine.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="using:Cafeine"
     mc:Ignorable="d">
+    <Page.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <local:SearchIndex/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Page.Resources>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <TextBlock Text="Results for :" FontSize="32" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="24,24,0,0"/>
+        <GridView HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,80,0,0"/>
+    </Grid>
 </Page>
