--- a/Cafeine/Views/View_Resouces/DIrectoryTemplate.xaml
+++ b/Cafeine/Views/View_Resouces/DIrectoryTemplate.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Cafeine.Properties"
+    xmlns:local="using:Cafeine.Models"
     x:Class="Cafeine.DirectoryTemplate">
     <DataTemplate x:Name="DirectoryCollection" x:DataType="local:VirtualDirectory">
         <RelativePanel Width="165" Height="290">
