--- a/Cafeine/Views/MoreDetails.xaml
+++ b/Cafeine/Views/MoreDetails.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="using:Cafeine.ViewModels"
     mc:Ignorable="d">
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
@@ -12,11 +13,19 @@
         </Grid.ColumnDefinitions>
         <RelativePanel Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center">
             <Image x:Name="image" Height="250" Width="176" HorizontalAlignment="Left"/>
-            <TextBlock x:Name="Title" FontFamily="Segoe UI" FontWeight="Black" FontSize="25" Text="Kobayashi-san Chi no Maid Dragon" Width="176" HorizontalAlignment="Left"  VerticalAlignment="Top" RelativePanel.Below="image" TextWrapping="WrapWholeWords" Margin="0,27,0,0" TextReadingOrder="DetectFromContent" />
+            <TextBlock x:Name="Title" FontFamily="Segoe UI" FontWeight="Black" FontSize="20" Text="Anohana" Width="176" HorizontalAlignment="Left"  VerticalAlignment="Top" RelativePanel.Below="image" TextWrapping="WrapWholeWords" Margin="0,12,0,0" TextReadingOrder="DetectFromContent" />
         </RelativePanel>
-        <RelativePanel Grid.Column="1">
-            <TextBlock x:Name="User_Rating" Text="8" HorizontalAlignment="Left" Width="271" Height="31" Padding="10,0,0,0" VerticalAlignment="Top" />
-            <ComboBox HorizontalAlignment="Left" Height="36" Margin="181,98,-234,-102" VerticalAlignment="Top" Width="117"/>
+        <RelativePanel Grid.Column="1" VerticalAlignment="Center" Padding="24,0,0,0">
+            <TextBlock x:Name="ScoreLabel" HorizontalAlignment="Left" Margin="0,70,0,0" Text="Score" VerticalAlignment="Top" OpticalMarginAlignment="TrimSideBearings"/>
+            <TextBox x:Name="User_Rating" Text="8" Width="271" Height="31" Padding="10,0,0,0" RelativePanel.Below="ScoreLabel" HorizontalAlignment="Left" VerticalAlignment="Top" />
+            
+            <TextBlock x:Name="EpisodesLabel" HorizontalAlignment="Left" Text="Episodes" RelativePanel.Below="User_Rating" VerticalAlignment="Top" OpticalMarginAlignment="TrimSideBearings"/>
+            <TextBox x:Name="User_Episodes" Text="8" Width="271" Height="31" Padding="10,0,0,0" RelativePanel.Below="EpisodesLabel" HorizontalAlignment="Left" VerticalAlignment="Top" />
+
+            <TextBlock x:Name="StatusLabel" HorizontalAlignment="Left" Text="Status" RelativePanel.Below="User_Episodes" VerticalAlignment="Top" OpticalMarginAlignment="TrimSideBearings"/>
+            <TextBox x:Name="User_Status" Text="8" Width="271" Height="31" Padding="10,0,0,0" RelativePanel.Below="StatusLabel" HorizontalAlignment="Left" VerticalAlignment="Top" />
+
+            <Button x:Name="test" Content="Save" RelativePanel.Below="User_Status" HorizontalAlignment="Left" Height="40" VerticalAlignment="Top" Width="96" Margin="0,20,0,70"/>
         </RelativePanel>
     </Grid>
 </Page>
