User Interface update: - Add Template for Library & Schedule tabs - Add Template for Search Box

--- a/Cafeine/Views/CollectionLibrary.xaml
+++ b/Cafeine/Views/CollectionLibrary.xaml
@@ -44,7 +44,7 @@
                 </RelativePanel>
             </Grid>
         </Popup>
-        <GridView Margin="8,0,0,0" x:Name="watch" Foreground="{x:Null}" IsItemClickEnabled="True" ItemClick="NavigateItemtoDetailsPage" ItemTemplate="{StaticResource Collection}" ItemContainerStyle="{StaticResource WatchingTab}" ScrollViewer.VerticalScrollBarVisibility="Hidden">
+        <GridView Margin="8,0,0,0" x:Name="watch" Foreground="{x:Null}" IsItemClickEnabled="True" ItemClick="NavigateItemtoDetailsPage" ItemTemplate="{StaticResource Collection}" ItemContainerStyle="{StaticResource WatchingTab}">
             <!--
                         <GridView.ItemsPanel>
                             <ItemsPanelTemplate>
