--- a/Cafeine/Views/View_Resouces/CollectionTemplate.xaml
+++ b/Cafeine/Views/View_Resouces/CollectionTemplate.xaml
@@ -4,9 +4,13 @@
     xmlns:local="using:Cafeine.ViewModels"
     xmlns:xaml="using:Windows.UI.Xaml"
     x:Class="Cafeine.CollectionTemplates">
-    <xaml:DataTemplate x:Name="Collection" x:DataType="local:CollectionLibraryViewModel">
-        <RelativePanel Width="165" Height="290">
-            <Grid x:Name="quickstatus" PointerEntered="ImageEntered" PointerExited="ImageExited" Height="225" Width="160" Margin="3,3,3,8" HorizontalAlignment="Center" Canvas.ZIndex="1" Opacity="0">
+    <DataTemplate x:Name="Collection" x:DataType="local:CollectionLibraryViewModel">
+        <Grid Width="154" Height="300">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="228"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid x:Name="quickstatus" Grid.Row="0" PointerEntered="ImageEntered" PointerExited="ImageExited" Width="160" Margin="3,3,3,0" HorizontalAlignment="Center" Canvas.ZIndex="1" Opacity="0">
                 <Grid.Resources>
                     <Storyboard x:Name="ImageOnHover">
                         <DoubleAnimation Storyboard.TargetName="quickstatus" Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:0.15">
@@ -33,14 +37,14 @@
                     <TextBlock x:Name="Myepisode" Grid.Row="1" Text="{x:Bind Path=My_watch, Mode=OneWay}" VerticalAlignment="Center" FontFamily="Segoe UI Semilight" FontWeight="SemiLight" Foreground="White"/>
                 </Grid>
             </Grid>
-            <Image x:Name="theimage" Source="{x:Bind Path=Image}" MaxHeight="225" HorizontalAlignment="Center" VerticalAlignment="Top" RelativePanel.AlignLeftWithPanel="True" Stretch="UniformToFill" Margin="3,3,3,5"/>
-            <TextBlock x:Name="thetitle" Margin="3,0" Text="{x:Bind Path=Itemproperty.Item_Title}" x:Phase="1"  FontSize="15" FontWeight="Medium" RelativePanel.Below="quickstatus" TextTrimming="CharacterEllipsis" TextWrapping="Wrap" Foreground="#FF333333" MaxLines="2" FontStretch="ExtraCondensed"/>
-            <TextBlock x:Name="series_start" Text="{x:Bind Path=Itemproperty.Series_start}" Visibility="Collapsed" Margin="3,0" x:Phase="1" FontFamily="Segoe UI" FontSize="15" RelativePanel.Below="thetitle" TextTrimming="None" TextWrapping="Wrap" Foreground="#FF3F3F3F"/>
-        </RelativePanel>
-    </xaml:DataTemplate>
+            <Image x:Name="theimage" Grid.Row="0" Source="{x:Bind Path=Image}" MaxHeight="225" HorizontalAlignment="Center" VerticalAlignment="Top" RelativePanel.AlignLeftWithPanel="True" Stretch="Fill" Margin="3,3,3,0"/>
+            <TextBlock x:Name="thetitle" Grid.Row="1" Margin="8,0" Text="{x:Bind Path=Itemproperty.Item_Title}" x:Phase="1"  FontSize="15" FontWeight="Medium" RelativePanel.Below="quickstatus" TextTrimming="CharacterEllipsis" TextWrapping="Wrap" Foreground="#FF333333" MaxLines="2" FontStretch="ExtraCondensed"/>
+            <TextBlock x:Name="series_start" Margin="3,0" Text="{x:Bind Path=Itemproperty.Series_start}" Visibility="Collapsed"  x:Phase="1" FontFamily="Segoe UI" FontSize="15" RelativePanel.Below="thetitle" TextTrimming="None" TextWrapping="Wrap" Foreground="#FF3F3F3F"/>
+        </Grid>
+    </DataTemplate>
     <ListViewItemPresenterCheckMode x:Key="GridViewItemCheckMode">Inline</ListViewItemPresenterCheckMode>
     <Style x:Key="WatchingTab" TargetType="GridViewItem">
-        <Setter Property="Margin" Value="0,0,4,14"/>
+        <Setter Property="Margin" Value="0,12,8,0"/>
     </Style>
     <x:Double x:Key="PivotHeaderItemFontSize">20</x:Double>
     <x:String x:Key="PivotHeaderItemThemeFontWeight">SemiBold</x:String>
