--- a/Cafeine/Views/CollectionLibrary.xaml
+++ b/Cafeine/Views/CollectionLibrary.xaml
@@ -1,10 +1,11 @@
 ﻿<Page
-    x:Class="Cafeine.Pages.CollectionLibrary"
+    x:Class="Cafeine.CollectionLibrary"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Cafeine"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
     mc:Ignorable="d">
     <Page.Resources>
         <ResourceDictionary>
@@ -20,31 +21,15 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Popup x:Name="ppup" IsOpen="False" IsLightDismissEnabled="True">
-            <Grid x:Name="popupp" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="0.6*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <RelativePanel Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" >
-                    <Image x:Name="image" Height="250" Width="176" HorizontalAlignment="Left"/>
-                    <TextBlock x:Name="Title" FontFamily="Segoe UI" FontWeight="Black" FontSize="20" Width="176" HorizontalAlignment="Left"  VerticalAlignment="Top" RelativePanel.Below="image" TextWrapping="WrapWholeWords" Margin="0,12,0,0" TextReadingOrder="DetectFromContent" />
-                </RelativePanel>
-                <RelativePanel Grid.Column="1" VerticalAlignment="Center" Padding="24,0,0,0">
-                    <TextBlock x:Name="ScoreLabel" HorizontalAlignment="Left" Margin="0,70,0,0" Text="Score" VerticalAlignment="Top" OpticalMarginAlignment="TrimSideBearings"/>
-                    <TextBox x:Name="User_Rating" Width="271" Height="31" Padding="10,0,0,0" RelativePanel.Below="ScoreLabel" HorizontalAlignment="Left" VerticalAlignment="Top" />
-
-                    <TextBlock x:Name="EpisodesLabel" HorizontalAlignment="Left" RelativePanel.Below="User_Rating" VerticalAlignment="Top" OpticalMarginAlignment="TrimSideBearings"/>
-                    <TextBox x:Name="User_Episodes" Width="271" Height="31" Padding="10,0,0,0" RelativePanel.Below="EpisodesLabel" HorizontalAlignment="Left" VerticalAlignment="Top" />
-
-                    <!--<TextBlock x:Name="StatusLabel" HorizontalAlignment="Left" Text="Status" RelativePanel.Below="User_Episodes" VerticalAlignment="Top" OpticalMarginAlignment="TrimSideBearings"/>
-                    <TextBox x:Name="User_Status" Text="8" Width="271" Height="31" Padding="10,0,0,0" RelativePanel.Below="StatusLabel" HorizontalAlignment="Left" VerticalAlignment="Top" />-->
-
-                    <Button x:Name="btn_save" Content="Save" RelativePanel.Below="User_Episodes" HorizontalAlignment="Left" Height="40" VerticalAlignment="Top" Width="96" Margin="0,20,0,70"/>
-                </RelativePanel>
-            </Grid>
-        </Popup>
-        <GridView Margin="12,0,0,0" x:Name="watch" Foreground="{x:Null}" IsItemClickEnabled="True" ItemClick="NavigateItemtoDetailsPage" ItemTemplate="{StaticResource Collection}" ItemContainerStyle="{StaticResource WatchingTab}">
+        <GridView x:Name="watch"
+                  Margin="12,0,0,0"
+                  Foreground="{x:Null}"
+                  SelectionMode="None"
+                  IsItemClickEnabled="True"
+                  ItemClick="ExpandItem"
+                  ItemTemplate="{StaticResource Collection}"
+                  ItemContainerStyle="{StaticResource WatchingTab}"
+                  animations:ReorderGridAnimation.Duration="300">
             <!--
                         <GridView.ItemsPanel>
                             <ItemsPanelTemplate>
