--- a/Cafeine/Views/DirectoryExplorer.xaml
+++ b/Cafeine/Views/DirectoryExplorer.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Cafeine.Pages.DirectoryExplorer"
+    x:Class="Cafeine.DirectoryExplorer"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Cafeine"
