Small UI Update : - Switch default font to Montserrat - Change background color

--- a/Cafeine/Views/DirectoryExplorer.xaml
+++ b/Cafeine/Views/DirectoryExplorer.xaml
@@ -13,7 +13,7 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Page.Resources>
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
