--- a/Cafeine/Views/ExpandItemDetails.xaml
+++ b/Cafeine/Views/ExpandItemDetails.xaml
@@ -13,12 +13,214 @@
     PrimaryButtonClick="ContentDialog_PrimaryButtonClick"
     SecondaryButtonClick="ContentDialog_SecondaryButtonClick"
     >
+    <ContentDialog.Template>
+        <ControlTemplate TargetType="ContentDialog">
+            <Border x:Name="Container">
+                <VisualStateManager.VisualStateGroups>
+                    <VisualStateGroup x:Name="ButtonsVisibilityStates">
+                        <VisualState x:Name="AllVisible"/>
+                        <VisualState x:Name="NoneVisible">
+                            <VisualState.Setters>
+                                <Setter Target="PrimaryButton.Visibility" Value="Collapsed" />
+                                <Setter Target="SecondaryButton.Visibility" Value="Collapsed" />
+                                <Setter Target="CloseButton.Visibility" Value="Collapsed" />
+                            </VisualState.Setters>
+                        </VisualState>
+                        <VisualState x:Name="PrimaryVisible">
+                            <VisualState.Setters>
+                                <Setter Target="PrimaryButton.(Grid.Column)" Value="2" />
+                                <Setter Target="PrimaryButton.(Grid.ColumnSpan)" Value="2" />
+                                <Setter Target="PrimaryButton.Margin" Value="2,0,0,0" />
+                                <Setter Target="SecondaryButton.Visibility" Value="Collapsed" />
+                                <Setter Target="CloseButton.Visibility" Value="Collapsed" />
+                            </VisualState.Setters>
+                        </VisualState>
+                        <VisualState x:Name="SecondaryVisible">
+                            <VisualState.Setters>
+                                <Setter Target="SecondaryButton.(Grid.Column)" Value="2" />
+                                <Setter Target="SecondaryButton.(Grid.ColumnSpan)" Value="2" />
+                                <Setter Target="SecondaryButton.Margin" Value="2,0,0,0" />
+                                <Setter Target="PrimaryButton.Visibility" Value="Collapsed" />
+                                <Setter Target="CloseButton.Visibility" Value="Collapsed" />
+                            </VisualState.Setters>
+                        </VisualState>
+                        <VisualState x:Name="CloseVisible">
+                            <VisualState.Setters>
+                                <Setter Target="CloseButton.(Grid.Column)" Value="2" />
+                                <Setter Target="CloseButton.(Grid.ColumnSpan)" Value="2" />
+                                <Setter Target="CloseButton.Margin" Value="2,0,0,0" />
+                                <Setter Target="PrimaryButton.Visibility" Value="Collapsed" />
+                                <Setter Target="SecondaryButton.Visibility" Value="Collapsed" />
+                            </VisualState.Setters>
+                        </VisualState>
+                        <VisualState x:Name="PrimaryAndSecondaryVisible">
+                            <VisualState.Setters>
+                                <Setter Target="PrimaryButton.(Grid.ColumnSpan)" Value="2" />
+                                <Setter Target="SecondaryButton.(Grid.Column)" Value="2" />
+                                <Setter Target="SecondaryButton.(Grid.ColumnSpan)" Value="2" />
+                                <Setter Target="SecondaryButton.Margin" Value="2,0,0,0" />
+                                <Setter Target="CloseButton.Visibility" Value="Collapsed" />
+                            </VisualState.Setters>
+                        </VisualState>
+                        <VisualState x:Name="PrimaryAndCloseVisible">
+                            <VisualState.Setters>
+                                <Setter Target="PrimaryButton.(Grid.ColumnSpan)" Value="2" />
+                                <Setter Target="CloseButton.(Grid.Column)" Value="2" />
+                                <Setter Target="CloseButton.(Grid.ColumnSpan)" Value="2" />
+                                <Setter Target="CloseButton.Margin" Value="2,0,0,0" />
+                                <Setter Target="SecondaryButton.Visibility" Value="Collapsed" />
+                            </VisualState.Setters>
+                        </VisualState>
+                        <VisualState x:Name="SecondaryAndCloseVisible">
+                            <VisualState.Setters>
+                                <Setter Target="SecondaryButton.(Grid.Column)" Value="0" />
+                                <Setter Target="SecondaryButton.(Grid.ColumnSpan)" Value="2" />
+                                <Setter Target="SecondaryButton.Margin" Value="0,0,2,0" />
+                                <Setter Target="CloseButton.(Grid.Column)" Value="2" />
+                                <Setter Target="CloseButton.(Grid.ColumnSpan)" Value="2" />
+                                <Setter Target="CloseButton.Margin" Value="2,0,0,0" />
+                                <Setter Target="PrimaryButton.Visibility" Value="Collapsed" />
+                            </VisualState.Setters>
+                        </VisualState>
+                    </VisualStateGroup>
+                    <VisualStateGroup x:Name="DefaultButtonStates">
+                        <VisualState x:Name="NoDefaultButton"/>
+                        <VisualState x:Name="PrimaryAsDefaultButton">
+                            <VisualState.Setters>
+                                <Setter Target="PrimaryButton.Style" Value="{StaticResource AccentButtonStyle}" />
+                            </VisualState.Setters>
+                        </VisualState>
+                        <VisualState x:Name="SecondaryAsDefaultButton">
+                            <VisualState.Setters>
+                                <Setter Target="SecondaryButton.Style" Value="{StaticResource AccentButtonStyle}" />
+                            </VisualState.Setters>
+                        </VisualState>
+                        <VisualState x:Name="CloseAsDefaultButton">
+                            <VisualState.Setters>
+                                <Setter Target="CloseButton.Style" Value="{StaticResource AccentButtonStyle}" />
+                            </VisualState.Setters>
+                        </VisualState>
+                    </VisualStateGroup>
+                </VisualStateManager.VisualStateGroups>
+                <Grid x:Name="LayoutRoot">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <Border x:Name="BackgroundElement"
+                            Background="{TemplateBinding Background}"
+                            FlowDirection="{TemplateBinding FlowDirection}"
+                            BorderThickness="{ThemeResource ContentDialogBorderWidth}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            MaxWidth="{TemplateBinding MaxWidth}"
+                            MaxHeight="{TemplateBinding MaxHeight}"
+                            MinWidth="{ThemeResource ContentDialogMinWidth}"
+                            MinHeight="{ThemeResource ContentDialogMinHeight}">
+                        <Grid x:Name="DialogSpace" VerticalAlignment="Stretch" Padding="{ThemeResource ContentDialogPadding}">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <ScrollViewer x:Name="ContentScrollViewer"
+                                        HorizontalScrollBarVisibility="Disabled"
+                                        VerticalScrollBarVisibility="Disabled"
+                                        ZoomMode="Disabled"
+                                        Margin="{ThemeResource ContentDialogContentScrollViewerMargin}"
+                                        IsTabStop="False">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="*" />
+                                    </Grid.RowDefinitions>
+                                    <ContentControl x:Name="Title"
+                                                Margin="{ThemeResource ContentDialogTitleMargin}"
+                                                Content="{TemplateBinding Title}"
+                                                ContentTemplate="{TemplateBinding TitleTemplate}"
+                                                FontSize="20"
+                                                FontFamily="XamlAutoFontFamily"
+                                                FontWeight="Normal"
+                                                Foreground="{TemplateBinding Foreground}"
+                                                HorizontalAlignment="Left"
+                                                VerticalAlignment="Top"
+                                                IsTabStop="False">
+                                        <ContentControl.Template>
+                                            <ControlTemplate TargetType="ContentControl">
+                                                <ContentPresenter Content="{TemplateBinding Content}"
+                                                            MaxLines="2"
+                                                            TextWrapping="Wrap"
+                                                            ContentTemplate="{TemplateBinding ContentTemplate}"
+                                                            Margin="{TemplateBinding Padding}"
+                                                            ContentTransitions="{TemplateBinding ContentTransitions}"
+                                                            HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                                            </ControlTemplate>
+                                        </ContentControl.Template>
+                                    </ContentControl>
+                                    <ContentPresenter x:Name="Content"
+                                                ContentTemplate="{TemplateBinding ContentTemplate}"
+                                                Content="{TemplateBinding Content}"
+                                                FontSize="{ThemeResource ControlContentThemeFontSize}"
+                                                FontFamily="{ThemeResource ContentControlThemeFontFamily}"
+                                                Margin="{ThemeResource ContentDialogContentMargin}"
+                                                Foreground="{TemplateBinding Foreground}"
+                                                Grid.Row="1"
+                                                TextWrapping="Wrap" />
+                                </Grid>
+                            </ScrollViewer>
+                            <Grid x:Name="CommandSpace"
+                                        Grid.Row="1"
+                                        HorizontalAlignment="Stretch"
+                                        VerticalAlignment="Bottom" Margin="24,0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition Width="0.5*"/>
+                                    <ColumnDefinition Width="0.5*"/>
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+                                <Button x:Name="PrimaryButton"
+                                            Content="{TemplateBinding PrimaryButtonText}"
+                                            IsEnabled="{TemplateBinding IsPrimaryButtonEnabled}"
+                                            Style="{TemplateBinding PrimaryButtonStyle}"
+                                            ElementSoundMode="FocusOnly"
+                                            HorizontalAlignment="Stretch"
+                                            VerticalAlignment="Stretch"
+                                            Margin="0,0,2,0"
+                                            Grid.Column="0" />
+                                <Button x:Name="SecondaryButton"
+                                            Content="{TemplateBinding SecondaryButtonText}"
+                                            IsEnabled="{TemplateBinding IsSecondaryButtonEnabled}"
+                                            Style="{TemplateBinding SecondaryButtonStyle}"
+                                            ElementSoundMode="FocusOnly"
+                                            HorizontalAlignment="Stretch"
+                                            VerticalAlignment="Stretch"
+                                            Margin="2,0,2,0"
+                                            Grid.Column="1"
+                                            Grid.ColumnSpan="2" />
+                                <Button x:Name="CloseButton"
+                                            Content="{TemplateBinding CloseButtonText}"
+                                            Style="{TemplateBinding CloseButtonStyle}"
+                                            ElementSoundMode="FocusOnly"
+                                            HorizontalAlignment="Stretch"
+                                            VerticalAlignment="Stretch"
+                                            Margin="2,0,0,0"
+                                            Grid.Column="3" />
+                            </Grid>
+                        </Grid>
+                    </Border>
+                </Grid>
+            </Border>
+        </ControlTemplate>
+    </ContentDialog.Template>
     <ContentDialog.Resources>
         <Thickness x:Key="ContentDialogBorderWidth">0</Thickness>
-        <Thickness x:Key="ContentDialogTitleMargin">0</Thickness>
+        <Thickness x:Key="ContentDialogPadding">0,0,0,24</Thickness>
+        <x:Double x:Key="ContentDialogMaxWidth">600</x:Double>
+        <x:Double x:Key="ContentDialogMaxHeight">500</x:Double>
     </ContentDialog.Resources>
 
-    <Grid x:Name="popupp" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" VerticalAlignment="Stretch">
+    <Grid x:Name="popupp" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.6*"/>
             <ColumnDefinition Width="*"/>
@@ -26,36 +228,39 @@
         <RelativePanel Grid.Column="0">
             <Image x:Name="BackgroundBlur"
                    MinWidth="500"
+                   Stretch="Uniform"
                    HorizontalAlignment="Center"
                    RelativePanel.AlignHorizontalCenterWithPanel="True">
                 <interactivity:Interaction.Behaviors>
                     <behaviors:Blur x:Name="BlurBehavior"
-                        Value="6"
-                        Duration="300"
-                        AutomaticallyStart="True"/>
+                                    Value="6"
+                                    Duration="300"
+                                    AutomaticallyStart="True"/>
                 </interactivity:Interaction.Behaviors>
             </Image>
             <Rectangle Fill="Black"
                        Opacity="0.4"
-                       MinWidth="500"
+                       MinWidth="250"
                        MinHeight="600"
                        VerticalAlignment="Stretch"
                        HorizontalAlignment="Stretch"/>
             <!--<Image x:Name="image" Height="250" Width="176" HorizontalAlignment="Left" Canvas.ZIndex="1" RelativePanel.AlignVerticalCenterWithPanel="True"/>-->
             <TextBlock x:Name="Title" 
-                       FontFamily="Segoe UI"
-                       FontWeight="Black"
+                       FontFamily="ms-appx:/Font/Montserrat/Montserrat-Black.ttf#Montserrat Black"
                        FontSize="23"
+                       FontWeight="Black"
+                       Text="Shuumatsu Nani Shitemasu Ka"
                        Padding="8,0,12,0"
                        RelativePanel.AlignRightWithPanel="True"
                        RelativePanel.AlignVerticalCenterWithPanel="True"
                        TextWrapping="WrapWholeWords"
                        Foreground="White"
                        TextAlignment="Right"
-                       CharacterSpacing="20"
+                       OpticalMarginAlignment="TrimSideBearings"
+                       CharacterSpacing="12"
                        />
         </RelativePanel>
-        <RelativePanel Grid.Column="1" VerticalAlignment="Center" Padding="24,0,0,0">
+        <RelativePanel Grid.Column="1" VerticalAlignment="Center" Padding="24,0,0,0" Width="375">
             <TextBlock x:Name="ScoreLabel" HorizontalAlignment="Left" Margin="0,70,0,0" Text="Score" VerticalAlignment="Top" OpticalMarginAlignment="TrimSideBearings"/>
             <TextBox x:Name="User_Rating" Width="271" Height="31" Padding="10,0,0,0" RelativePanel.Below="ScoreLabel" HorizontalAlignment="Left" VerticalAlignment="Top" />
 
